# cv

./: README.md
claude-ml/: Makefile  pyproject.toml
claude-ml/configs/data/: cityscapes.yaml
claude-ml/configs/deployment/: default.yaml
claude-ml/configs/training/: default.yaml  distributed.yaml
claude-ml/docker/: Dockerfile.serve  docker-compose.yml  prometheus.yml
claude-ml/k8s/: inference-deployment.yaml  namespace.yaml  training-job.yaml
claude-ml/scripts/: train.py
claude-ml/src/urban_seg/data/: cityscapes.py
claude-ml/src/urban_seg/deployment/: export.py  server.py
claude-ml/src/urban_seg/models/: __init__.py
claude-ml/src/urban_seg/models/backbones/: __init__.py  registry.py
claude-ml/src/urban_seg/models/heads/: __init__.py
claude-ml/src/urban_seg/monitoring/: tracker.py
claude-ml/src/urban_seg/training/: __init__.py  lit_module.py  metrics.py
claude-ml/tests/: conftest.py  test_data.py  test_losses.py  test_serving.py
object_detection/: CLAUDE.md  Makefile  pyproject.toml
object_detection/.claude/: settings.local.json
object_detection/configs/: config.yaml
object_detection/configs/data/: coco.yaml  nuscenes.yaml
object_detection/configs/deployment/: default.yaml  tensorrt.yaml
object_detection/configs/model/: dino_r50.yaml  rtdetr_r101.yaml  rtdetr_r50.yaml
object_detection/configs/training/: default.yaml  distributed.yaml
object_detection/docker/: Dockerfile.edge  Dockerfile.serve  Dockerfile.train  docker-compose.yml  prometheus.yml
object_detection/k8s/: inference-deployment.yaml  inference-service.yaml  namespace.yaml  training-job.yaml
object_detection/scripts/: evaluate.py  export_model.py  prepare_data.py  train.py
object_detection/src/urban_det/: __init__.py
object_detection/src/urban_det/data/: __init__.py  coco.py  datamodule.py  transforms.py
object_detection/src/urban_det/deployment/: __init__.py  export.py  server.py
object_detection/src/urban_det/deployment/edge/: ros2_node.py  tensorrt_infer.py
object_detection/src/urban_det/evaluation/: __init__.py  evaluator.py
object_detection/src/urban_det/models/: __init__.py  detection_model.py
object_detection/src/urban_det/models/backbones/: __init__.py  registry.py
object_detection/src/urban_det/models/heads/: __init__.py  dino_head.py  rtdetr_head.py
object_detection/src/urban_det/monitoring/: __init__.py  tracker.py
object_detection/src/urban_det/training/: __init__.py  lit_module.py  losses.py  metrics.py
object_detection/tests/: conftest.py  test_data.py  test_losses.py  test_models.py  test_serving.py
semantic_segmentation/: CLAUDE.md
semantic_segmentation/configs/: config.yaml
semantic_segmentation/configs/model/: deeplabv3plus.yaml  segformer_b2.yaml  unet.yaml
semantic_segmentation/docker/: Dockerfile.train
semantic_segmentation/k8s/: inference-service.yaml
semantic_segmentation/scripts/: evaluate.py  export_model.py  prepare_data.py
semantic_segmentation/src/urban_seg/: __init__.py
semantic_segmentation/src/urban_seg/data/: __init__.py  datamodule.py  transforms.py
semantic_segmentation/src/urban_seg/deployment/: __init__.py
semantic_segmentation/src/urban_seg/evaluation/: evaluator.py
semantic_segmentation/src/urban_seg/models/: segmentation_model.py
semantic_segmentation/src/urban_seg/models/heads/: __init__.py  deeplab_head.py  segformer_head.py  unet_head.py
semantic_segmentation/src/urban_seg/training/: losses.py
semantic_segmentation/tests/: test_models.py
